# diploma_master

./: .gitignore  Dockerfile  Dockerfile.pymc  GEMINI.md  db_toolbox_mcp.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.codex/: config.toml
chapter_3/: 3_1.md  3_10.md  3_2.md  3_3.md  3_4.md  3_5.md  3_6.md  3_7.md  3_8.md  3_9.md  chapter_plan.md
dags/: dag_phase1_datasets.py  dag_phase2_dda.py  dag_phase2_mmm.py  dag_phase2_survival.py  dag_phase3_evaluation.py  dag_rocv_master.py
docs/: orchestration_guidelines.md  rfc_template.md
docs/algorithms/: dda_models.md  index.md  mmm_models.md  survival_models.md
docs/comparison/: comparison_framework.md  comparison_visualization.md  final_metric_scoring.md  portfolio_optimization.md  visualization_challenges.md
docs/data/: index.md  intermediate_datasets.md  intermediate_datasets_implementation.md  model_specific_marts.md  model_specific_marts_implementation.md
features/: task_001_context_summary.md  task_list_context_summary.md
models/: __init__.py  rocv.py
models/attribution/: __init__.py  (+3 more)
reports/: ols_channel_coeffs_fold_4.csv
scripts/: generate_touchpoints.py  users_attribution_imputation.py
sql/: copy_users_attribution.sql  dda_last_click.sql
tests/: test_consolidation.py  test_dda_ewma_projection_new.py  test_dda_markov_new_fallback.py  test_evaluation_figures_smoke.py  test_evaluation_folds_and_contracts.py  test_evaluation_metrics.py  test_generate_touchpoints.py  test_net_revenue_calc_and_fallbacks.py  test_survival_new.py  test_users_attribution_imputation.py
(+59 files in other folders)
